# citypulse

citypulse/: .gitignore  .replit  index.html  package-lock.json  package.json  pyproject.toml  replit.md  tailwind.config.js  vite.config.js
citypulse/.agents/: agent_assets_metadata.toml
citypulse/citypulse/citypulse/: index.html
citypulse/citypulse/citypulse/src/: App.jsx  index.css  main.jsx  router.jsx
citypulse/citypulse/citypulse/src/components/charts/: AreaChart.jsx  BarChart.jsx  LineChart.jsx  RadialGauge.jsx
citypulse/citypulse/citypulse/src/components/layout/: Layout.jsx  Sidebar.jsx  TopBar.jsx
citypulse/citypulse/citypulse/src/data/: aiFaq.js  cityZones.js  demoGenerators.js  seedData.js
citypulse/citypulse/citypulse/src/hooks/: useAirQuality.js  useAlerts.js  useCityNews.js  useCityScore.js  useMlPredictions.js  useRealtimeMetrics.js  useWeather.js
citypulse/citypulse/citypulse/src/lib/: groq.js  location.js  mlService.js  news.js  openaq.js  openmeteo.js
citypulse/citypulse/citypulse/src/pages/: AIAdvisor.jsx  AirQuality.jsx  Alerts.jsx  CommandCenter.jsx  Emergency.jsx  Energy.jsx  LiveMap.jsx  MLInsights.jsx  Scenarios.jsx  Traffic.jsx  Transport.jsx  Waste.jsx  Water.jsx
citypulse/citypulse/citypulse/src/store/: cityStore.js
citypulse/citypulse/citypulse/supabase/migrations/: 001_initial.sql  002_alerts_metadata.sql
citypulse/exports/: CityPulse_Project_Report.md
citypulse/ml_service/: clean.py  data_generator.py  server.py  train.py
citypulse/ml_service/artifacts/: training_summary.json
(+11 files in other folders)
